# readEDID

./: .gitignore  README.md  main.c  parse-edid.c
ReadEDID.xcode/: arekkusu.pbxuser  project.pbxproj
project_file/readEDID.xcodeproj/: project.pbxproj
project_file/readEDID.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
project_file/readEDID.xcodeproj/xcuserdata/lirichard.xcuserdatad/xcschemes/: readEDID.xcscheme
readEDID/: CMakeLists.txt  handEDID.c  main.c  output.c  protos.h  readEDID.1  usage.c
readEDID.xcodeproj/: project.pbxproj
readEDID.xcodeproj/project.xcworkspace/xcshareddata/: readEDID.xccheckout
readEDID.xcodeproj/project.xcworkspace/xcuserdata/lirichard.xcuserdatad/: UserInterfaceState.xcuserstate
readEDID.xcodeproj/xcuserdata/lirichard.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
readEDID.xcodeproj/xcuserdata/lirichard.xcuserdatad/xcschemes/: xcschememanagement.plist
readEDID/readEDID/: CMakeLists.txt  bless_private.h  blessedid.h  enums.h  handDisplayAll.c  handDisplayNormal.c  handDisplayProductID.c
readedid.xcodeproj/: project.pbxproj
readedid.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
readedid.xcodeproj/project.xcworkspace/xcshareddata/: readedid.xccheckout
readedid.xcodeproj/project.xcworkspace/xcuserdata/lirichard.xcuserdatad/: UserInterfaceState.xcuserstate
readedid.xcodeproj/xcuserdata/lirichard.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  readedid.xcscheme  xcschememanagement.plist
